--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,24 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	box-sizing: border-box;.
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
+}
+
+html {
+	transition: smooth;
+}
+
+.background-pic
+ {
+ 	background-color: white;
+
 }
 
 .navbar{ 
-    background-color: black;
+    background-color: white;
 
 }
 
@@ -84,26 +97,94 @@ color: white;
 	padding: 0;
 	z-index: 1;
 	height: 100%;
+	background-color: white;
 }
+
+
+.buttons {
+    text-align: center;
+}
+
+.btn-hover {
+    width: 200px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 5px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+
+    border-radius: 50px;
+    -moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+    outline: none;
+}
+
+
+.btn-hover.color-1 {
+    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+
+.btn-hover.color-2 {
+    background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+    box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+}
+
+.btn-hover.color-3 {
+    background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
+}
+
+.btn-hover.color-4 {
+    background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
+    box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
+}
+
+.btn-hover.color-5 {
+    background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
+    box-shadow: 0 4px 15px 0 rgba(236, 116, 149, 0.75);
+}
+
 
 .midnav-item {
 	width: 18%;
 	z-index: 4;
+
 }
 
 
 .about {
 	margin-top: 90px;
+
 }
 
 #aboutsection {
 	text-align: center;
 	margin: 0 auto;
-	margin-bottom: 30px;
+	margin-bottom: 100px;
+	background-color: white;
 }
 
 .hex{
 	margin-top: 30px;
+	margin-bottom: 100px;
 }
 
 .card,
@@ -186,6 +267,7 @@ color: white;
   width: 300.0000px;
   height: 173.2051px;
   background: inherit;
+  z-index: 2;
 }
 
 .skillset {
@@ -226,8 +308,14 @@ color: white;
 	text-align: center;
 }
 
+.description {
+	margin-top: 150px;
+	margin-bottom: 50px;
+}
+
 .indent {
-	text-indent: 5px;
+	text-indent: 10px;
+	margin-top: 30px;
 }
 
 hr {
@@ -236,15 +324,15 @@ hr {
 }
 
 .projbase {
-	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-top: 100px;
+	margin-bottom: 100px;
 
 }
 
 
 .card-proj{
-	margin-bottom: 20px;
-	margin-top: 20px;
+	margin-bottom: 100px;
+	margin-top: 100px;
 }
 
 .contact-us {
